--- a/index.html
+++ b/index.html
@@ -12,12 +12,63 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-
+    <link rel="stylesheet" href="style.css" />
     <title>Bootstrap Instagram Clone</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <!-- header start -->
+    <header>
+      <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand font-logo" href="#">Instagram</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav float-right">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="#">Pricing</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <!-- header end -->
 
+    <!-- container kısmı row olarak içerisinde row-sm-8 ve row-sm-4 olacak şekilde iki alt kısımdan oluşacak. -->
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="storyNav">
+            <!-- story bölümü snapchat gibi olan -->
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-8">
+          <div class="card">
+            <!-- içeriklerin bulunduğu kart yapısı olacak -->
+          </div>
+          <div class="card"></div>
+          <div class="card"></div>
+          <div class="card"></div>
+          <div class="card"></div>
+        </div>
+        <div class="col-sm-4">
+          <!-- sağda yer alan bölüm -->
+        </div>
+      </div>
+    </div>
+    <footer></footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
